# QtSerialDPF

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
